k8s/infra/s3/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-api-service
spec:
  selector:
    app: minio
  type: ClusterIP
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console-service
spec:
  selector:
    app: minio
  type: ClusterIP
  ports:
    - name: console
      protocol: TCP
      port: 9001
      targetPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: minio-headless-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: minio
  ports:
    - name: console
      protocol: TCP
      port: 9001
      targetPort: 9001
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
