k8s/infra/s3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: s3.72.56.248.210.nip.io
      http:
        paths:
          # Это регулярное выражение захватывает все после /api-s3/
          - path: /api-s3(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: minio-api-service # Или как называется ваш сервис MinIO
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console-service # Или как называется ваш сервис MinIO
                port:
                  number: 9001
